Increment 5: sbe-tool in the pipeline, and the first release (#12)
Records in, sbe-tool's flyweights out: the first release.

Generator.generate runs steps 3 to 6: the document, validated against sbe.xsd and parsed by sbe-tool with stopOnError, warningsFatal and an errorPrintStream of ours, then the IR under the schema package's .sbe namespace and the flyweights through Agrona's DynamicPackageOutputManager with SbeTool's defaults. Every line sbe-tool reports is a problem naming the schema with sbe-tool's text verbatim, and nothing is generated.

The processor calls it after validate over a FilerOutputManager, one source file per flyweight originating from the schema package and a writer that discards for the header's second open, and writes the resource only after the flyweights. The api depends on Agrona at the version sbe-tool builds against, and test JVMs carry the flag Agrona's buffers need.

Tests are ours only: a schema sbe-tool rejects is a problem naming the schema, in the generator; sbe-tool's diagnostic lands on the schema package, in the processor's placement tests; and the example's smoke test encodes an order through the generated flyweights and reads it back. The in-memory javac helper hands a generated source back to javac for the next round. The clean plugin's version is locked, since the release builds with clean verify.

The README says what sbe-buddy is and shows it: the annotated schema, the flyweights it becomes and the XML that ships in the jar, why, what stays explicit, how the annotations mirror sbe.xsd, how the pipeline runs and what proves it, what this release covers and what it does not yet, how to set it up, and the flag Agrona needs at run time. The root POM carries 0.1.0; intent.md ticks increment 5.

notes.md records what the spike settled: generation loads no Agrona buffer class, the flyweights at run time need the flag, sbe-tool's warning text and the shape of its diagnostics, and a plain javac with no flag compiling the example end